--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </header>
   </section>
 
-  <section class="slider my-3 ">
-    <div class="container ">
+  <section class="slider">
+    <div class="container col-10">
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -91,9 +91,8 @@
             <video autoplay loop src="./Video/logo_spacerose.mp4" class="d-block w-100"></video>
           </div>
           <div class="carousel-item">
-            <img src="#" class="d-block w-100" alt="...">
+            <img src="./Img/universe.jpg" class="d-block w-100 video_logo" alt="...">
           </div>
-
 
 
           <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -110,22 +109,29 @@
 
 
   <section>
-    <div class="container">
-      <div class="row">
-        <article>
-          <h3>Sobre SpaceROSE</h3>
-          <p> En 1955 se da inicio a lo que hoy se conoce como la carrera espacial, una competencia entre dos grandes
-            bandos (URSS Y U.S.A)
-            que luchan por la gloria, con ese objetivo en mente, en Estados Unidos de América se crea el proyecto
-            Apollo. La historia es ambientada en los años 60, y se centrará en el alunizaje realizado por Apollo 11,
-            este relato será narrado por Katherine Johnson,
-            mujer afrodescendiente que realizó los cálculos que hicieron posible dicho suceso. </p>
-        </article>
+    <div class="container col-8">
+      <div class=" row d-flex align-items-center flex-column">
+        <h3 class="mb-5">Sobre SpaceROSE</h3>
+        <div class="row">
+          <article class="col-6">
+            <video autoplay loop  class="embed-responsive embed-responsive-16by9" src="./Video/logo_spacerose.mp4" width="560" height="315" ></video>
+          </article>
 
-        <article>
-          <video class="embed-responsive embed-responsive-16by9" src="#" width="560" height="315" controls
-            poster="#"></video>
-        </article>
+          <article class="col-6 p-5">
+            <p class=" "> En 1955 se da inicio a lo que hoy se conoce como la carrera espacial, una competencia entre
+              dos grandes
+              bandos (URSS Y U.S.A)
+              que luchan por la gloria, con ese objetivo en mente, en Estados Unidos de América se crea el proyecto
+              Apollo. La historia es ambientada en los años 60, y se centrará en el alunizaje realizado por Apollo 11,
+              este relato será narrado por Katherine Johnson,
+              mujer afrodescendiente que realizó los cálculos que hicieron posible dicho suceso. </p>
+
+            <button class="btn btn-danger my-4">Leer Comic</button>
+          </article>
+
+        </div>
+
+
 
       </div>
     </div>
