formularios registrarse, recuperación,  resdistribución seccio comic

--- a/index-shop.html
+++ b/index-shop.html
@@ -18,8 +18,8 @@
         <a href="./index.html" class="navbar-brand logo">
           <img
             class="img-fluid logo"
-            src="./Img/Logo responsive.png"
-            alt="Cientoonce"
+            src="./Img/logo Spacerose.png"
+            alt="Spacerose"
           />
         </a>
         <button
@@ -39,45 +39,45 @@
               <a class="nav-link text-dark mr-5 text-bold" href="./index-shop.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <button type="button" class="btn_login btn text-dark text-bold" data-toggle="modal" data-target="#login" >
+              <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal" data-target="#login">
                 Login
-                </button>
-                <!-- Modal -->
-                <div class="modal fade" id="login" data-backdrop="static" data-keyboard="false" >
-                  <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title"></h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <form >                   
-                            <h2 class="text-center pb-3 text-bold">Inicio Sesión</h2>
-                            <div class="form-group">
-                              <label for="email">Correo electrónico</label>
-                              <input required type="email" class="form-control" >
-                              <small id="emailHelp" class="form-text text-muted">No compartas tu correo electrónico con nadie</small>
-                            </div>
-                            <div class="form-group">
-                              <label for="password">Contraseña</label>
-                              <input required type="password" class="form-control">
-                            </div>
-                            <div class="form-group form-check">
-                              <input required type="checkbox" class="form-check-input" >
-                              <label >Mantenerme conectado</label>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-                            <div class="my-3">
-                                <span> ¿Ya tienes cuenta?<a href="#">Registrate</a></span><br>
-                                <span><a href="#">Recuperar contraseña</a></span>
-                            </div>
-                          </form>
-                      </div>            
+              </button>
+              <!-- Modal -->
+              <div class="modal fade" id="login" data-backdrop="static" data-keyboard="false">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title"></h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <h2 class="text-center pb-3 text-bold">Inicio Sesión</h2>
+                        <div class="form-group">
+                          <label for="email">Correo electrónico</label>
+                          <input required type="email" class="form-control">                              
+                        </div>
+                        <div class="form-group">
+                          <label for="password">Contraseña</label>
+                          <input required type="password" class="form-control">
+                        </div>
+                        <div class="form-group form-check">
+                          <input required type="checkbox" class="form-check-input">
+                          <label>Mantenerme conectado</label>
+                        </div>
+                        <div class="d-flex justify-content-center my-3"><button type="submit" class="btn btn-enviar text-bold">Iniciar sesión</button></div>
+                        <div class="my-3">
+                          <span> ¿Ya tienes cuenta? 
+                          <a href="./registrarse.html">Registrate</a></span> /
+                          <span><a href="./recuperacion.html">Recuperar contraseña</a></span>
+                        </div>
+                      </form>
                     </div>
                   </div>
-                </div> 
+                </div>
+              </div>
             </li>
           </ul>
         </div>
