--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrate</title>
+    <title>Spacerose-comic</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="./styles/registrarse.css" />
+    <link rel="stylesheet" href="./styles/recuperacion.css" />
 </head>
 
 <body>
@@ -79,18 +79,11 @@
         </header>
     </section>
 
-    <Section class="form_registrar mt-5">
+    <Section class="form_recuperacion mt-5">
         <div class="container col-6 shadow p-3 mb-5 bg-white rounded">
             <div class="row flex-column p-5">
-                <h3 class="text-center text-bold mb-5 rounded-pill py-3">Crear Cuenta</h3>
-                <form action="" class="d-flex flex-column">
-                    <input class="p-3 parrafo" type="text" placeholder="Nombre y Apellido" required />
-                    <input class="p-3 parrafo" type="email" placeholder="Correo Electrónico" required />
-                    <input class="p-3 parrafo" type="password" placeholder="Contraseña" required />
-                    <input class="p-3 parrafo" type="password" placeholder="Confirmar Contraseña" required />
-                </form>
-                <div class="d-flex justify-content-center "><button type="submit"
-                        class="btn btn_registrarse my-4">Registrarse</button></div>
+                <h3 class="text-center text-bold mb-5 rounded-pill py-3">Página lectura cómic</h3>
+                <p>... en proceso de diseño...</p>
             </div>
         </div>
     </Section>
