--- a/recuperacion.html
+++ b/recuperacion.html
@@ -59,7 +59,8 @@
                                                     <input required type="checkbox" class="form-check-input">
                                                     <label>Mantenerme conectado</label>
                                                 </div>
-                                                <div class="d-flex justify-content-center my-3"><button type="submit" class="btn btn-enviar text-bold">Iniciar sesión</button></div>
+                                                <div class="d-flex justify-content-center my-3"><button type="submit"
+                                                        class="btn btn-enviar text-bold">Iniciar sesión</button></div>
 
                                                 <div class="my-3">
                                                     <span> ¿Ya tienes cuenta?
@@ -84,13 +85,65 @@
                 <h3 class="text-center text-bold mb-5 rounded-pill py-3">Recuperar Contraseña</h3>
                 <form action="" class="d-flex flex-column">
                     <input class="p-3 parrafo" type="email" placeholder="Ingrese Correo Electrónico" required />
-                    
+
                 </form>
-                <div class="d-flex justify-content-center"><button type="submit" class="btn btn_registrarse my-4">Enviar</button></div>
+                <div class="d-flex justify-content-center"><button type="submit"
+                        class="btn btn_registrarse my-4">Enviar</button></div>
             </div>
         </div>
     </Section>
 
+    <button type="button" class=" border-0 iconContact" data-toggle="modal" data-target="#contact">
+        <i role="button" class="fas fa-headset text-white"></i>
+      </button>
+    
+      <!-- Modal -->
+      <div class="modal fade" id="contact" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form id="contactForm" class="row justify-content-center align-items-center">
+                <div class="col-12 btn-contact py-4 mb-3">
+                  <div class=" justify-content-center text-center text-white">
+                    <h4 class="text-bold">¿Podemos ayudarte en algo?</h4>
+                    <p class="subtitle">Con gusto te asesoramos</p>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="form-group ">
+                    <label for="Name" class="parrafo">Nombre y apellidos</label>
+                    <input required type="text" class="form-control parrafo" placeholder="">
+                  </div>
+                  <div class="form-group ">
+                    <label for="Email" class="parrafo">Email</label>
+                    <input required type="email" class="form-control parrafo" placeholder="">
+                  </div>
+                  <div class="form-group ">
+                    <label for="Coment" class="parrafo">Comentario</label>
+                    <textarea type="text" class="form-control parrafo" cols="0" rows="0"
+                      placeholder="Escribe tu comentario..."></textarea>
+                  </div>
+                  <div class="form-group text-center">
+                    <div class="form-check">
+                      <input required class="form-check-input" type="checkbox" id="gridCheck">
+                      <label class="form-check-label parrafo" for="gridCheck">
+                        Acepto la <a href="#" class="privacidad text-decoration-none text-bold ">politica de privacidad</a>
+                      </label>
+                    </div>
+                    <button type="submit" class="btn btn-contact text-white parrafo mt-3">Enviar</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- script -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
