--- a/registrarse.html
+++ b/registrarse.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
+    <link rel="shortcut icon" href="./Img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./styles/registrarse.css" />
@@ -25,10 +26,7 @@
                     <ul class="navbar-nav ml-auto menu">
                         <li class="nav-item">
                             <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  mr-5 text-white text-bold" href="./index-shop.html">Tienda</a>
-                        </li>
+                        </li>                       
                         <li class="nav-item">
                             <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal"
                                 data-target="#login">
