--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
           <ul class="navbar-nav ml-auto menu">
             <li class="nav-item">
               <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link  mr-5 text-white text-bold" href="./index-shop.html">Tienda</a>
-            </li>
+            </li>           
             <li class="nav-item">
               <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal" data-target="#login">
                 Login
@@ -91,7 +88,7 @@
           <video autoplay loop src="./Video/logo_spacerose.mp4" class="d-block w-100"></video>
         </div>
         <div class="carousel-item">
-          <img src="./Img/universe.jpg" class="d-block w-100 " alt="...">
+          <img src="./Img/slider principal/banner01.jpg" class="d-block w-100 " alt="...">
         </div>
 
 
