--- a/recuperacion.html
+++ b/recuperacion.html
@@ -2,152 +2,149 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrate</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="./styles/recuperacion.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registrate</title>
+  <link rel="shortcut icon" href="./Img/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="stylesheet" href="./styles/recuperacion.css" />
 </head>
 
 <body>
-    <section class="home">
-        <header class="container py-2">
-            <nav class="navbar navbar-dark navbar-expand-lg">
-                <a href="./index.html" class="navbar-brand logo">
-                    <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mainMenu">
-                    <ul class="navbar-nav ml-auto menu">
-                        <li class="nav-item">
-                            <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  mr-5 text-white text-bold" href="./index-shop.html">Tienda</a>
-                        </li>
-                        <li class="nav-item">
-                            <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal"
-                                data-target="#login">
-                                Login
-                            </button>
-                            <!-- Modal -->
-                            <div class="modal fade" id="login" data-backdrop="static" data-keyboard="false">
-                                <div class="modal-dialog modal-dialog-centered">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title"></h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form>
-                                                <h2 class="text-center pb-3 text-bold">Inicio Sesión</h2>
-                                                <div class="form-group">
-                                                    <label for="email">Correo electrónico</label>
-                                                    <input required type="email" class="form-control">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="password">Contraseña</label>
-                                                    <input required type="password" class="form-control">
-                                                </div>
-                                                <div class="form-group form-check">
-                                                    <input required type="checkbox" class="form-check-input">
-                                                    <label>Mantenerme conectado</label>
-                                                </div>
-                                                <div class="d-flex justify-content-center my-3"><button type="submit"
-                                                        class="btn btn-enviar text-bold">Iniciar sesión</button></div>
-
-                                                <div class="my-3">
-                                                    <span> ¿Ya tienes cuenta?
-                                                        <a href="./registrarse.html">Registrate</a></span> /
-                                                    <span><a href="./recuperacion.html">Recuperar contraseña</a></span>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-    </section>
-
-    <Section class="form_recuperacion mt-5">
-        <div class="container col-6 shadow p-3 mb-5 bg-white rounded">
-            <div class="row flex-column p-5">
-                <h3 class="text-center text-bold mb-5 rounded-pill py-3">Recuperar Contraseña</h3>
-                <form action="" class="d-flex flex-column">
-                    <input class="p-3 parrafo" type="email" placeholder="Ingrese Correo Electrónico" required />
-
-                </form>
-                <div class="d-flex justify-content-center"><button type="submit"
-                        class="btn btn_registrarse my-4">Enviar</button></div>
-            </div>
-        </div>
-    </Section>
-
-    <button type="button" class=" border-0 iconContact" data-toggle="modal" data-target="#contact">
-        <i role="button" class="fas fa-headset text-white"></i>
-      </button>
-    
-      <!-- Modal -->
-      <div class="modal fade" id="contact" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="staticBackdropLabel"></h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+  <section class="home">
+    <header class="container py-2">
+      <nav class="navbar navbar-dark navbar-expand-lg">
+        <a href="./index.html" class="navbar-brand logo">
+          <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainMenu">
+          <ul class="navbar-nav ml-auto menu">
+            <li class="nav-item">
+              <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal" data-target="#login">
+                Login
               </button>
-            </div>
-            <div class="modal-body">
-              <form id="contactForm" class="row justify-content-center align-items-center">
-                <div class="col-12 btn-contact py-4 mb-3">
-                  <div class=" justify-content-center text-center text-white">
-                    <h4 class="text-bold">¿Podemos ayudarte en algo?</h4>
-                    <p class="subtitle">Con gusto te asesoramos</p>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-group ">
-                    <label for="Name" class="parrafo">Nombre y apellidos</label>
-                    <input required type="text" class="form-control parrafo" placeholder="">
-                  </div>
-                  <div class="form-group ">
-                    <label for="Email" class="parrafo">Email</label>
-                    <input required type="email" class="form-control parrafo" placeholder="">
-                  </div>
-                  <div class="form-group ">
-                    <label for="Coment" class="parrafo">Comentario</label>
-                    <textarea type="text" class="form-control parrafo" cols="0" rows="0"
-                      placeholder="Escribe tu comentario..."></textarea>
-                  </div>
-                  <div class="form-group text-center">
-                    <div class="form-check">
-                      <input required class="form-check-input" type="checkbox" id="gridCheck">
-                      <label class="form-check-label parrafo" for="gridCheck">
-                        Acepto la <a href="#" class="privacidad text-decoration-none text-bold ">politica de privacidad</a>
-                      </label>
+              <!-- Modal -->
+              <div class="modal fade" id="login" data-backdrop="static" data-keyboard="false">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title"></h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
                     </div>
-                    <button type="submit" class="btn btn-contact text-white parrafo mt-3">Enviar</button>
+                    <div class="modal-body">
+                      <form>
+                        <h2 class="text-center pb-3 text-bold">Inicio Sesión</h2>
+                        <div class="form-group">
+                          <label for="email">Correo electrónico</label>
+                          <input required type="email" class="form-control">
+                        </div>
+                        <div class="form-group">
+                          <label for="password">Contraseña</label>
+                          <input required type="password" class="form-control">
+                        </div>
+                        <div class="form-group form-check">
+                          <input required type="checkbox" class="form-check-input">
+                          <label>Mantenerme conectado</label>
+                        </div>
+                        <div class="d-flex justify-content-center my-3"><button type="submit"
+                            class="btn btn-enviar text-bold">Iniciar sesión</button></div>
+
+                        <div class="my-3">
+                          <span> ¿Ya tienes cuenta?
+                            <a href="./registrarse.html">Registrate</a></span> /
+                          <span><a href="./recuperacion.html">Recuperar contraseña</a></span>
+                        </div>
+                      </form>
+                    </div>
                   </div>
                 </div>
-              </form>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </section>
+
+  <Section class="form_recuperacion mt-5">
+    <div class="container col-6 shadow p-3 mb-5 bg-white rounded">
+      <div class="row flex-column p-5">
+        <h3 class="text-center text-bold mb-5 rounded-pill py-3">Recuperar Contraseña</h3>
+        <form action="" class="d-flex flex-column">
+          <input class="p-3 parrafo" type="email" placeholder="Ingrese Correo Electrónico" required />
+
+        </form>
+        <div class="d-flex justify-content-center"><button type="submit"
+            class="btn btn_registrarse my-4">Enviar</button></div>
+      </div>
+    </div>
+  </Section>
+
+  <button type="button" class=" border-0 iconContact" data-toggle="modal" data-target="#contact">
+    <i role="button" class="fas fa-headset text-white"></i>
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="contact" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="contactForm" class="row justify-content-center align-items-center">
+            <div class="col-12 btn-contact py-4 mb-3">
+              <div class=" justify-content-center text-center text-white">
+                <h4 class="text-bold">¿Podemos ayudarte en algo?</h4>
+                <p class="subtitle">Con gusto te asesoramos</p>
+              </div>
             </div>
-          </div>
+            <div class="col-12">
+              <div class="form-group ">
+                <label for="Name" class="parrafo">Nombre y apellidos</label>
+                <input required type="text" class="form-control parrafo" placeholder="">
+              </div>
+              <div class="form-group ">
+                <label for="Email" class="parrafo">Email</label>
+                <input required type="email" class="form-control parrafo" placeholder="">
+              </div>
+              <div class="form-group ">
+                <label for="Coment" class="parrafo">Comentario</label>
+                <textarea type="text" class="form-control parrafo" cols="0" rows="0"
+                  placeholder="Escribe tu comentario..."></textarea>
+              </div>
+              <div class="form-group text-center">
+                <div class="form-check">
+                  <input required class="form-check-input" type="checkbox" id="gridCheck">
+                  <label class="form-check-label parrafo" for="gridCheck">
+                    Acepto la <a href="#" class="privacidad text-decoration-none text-bold ">politica de privacidad</a>
+                  </label>
+                </div>
+                <button type="submit" class="btn btn-contact text-white parrafo mt-3">Enviar</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
-    <!-- script -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    </div>
+  </div>
+  <!-- script -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 
 </body>
 
