--- a/index.html
+++ b/index.html
@@ -27,48 +27,9 @@
           <ul class="navbar-nav ml-auto menu">
             <li class="nav-item">
               <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
-            </li>           
+            </li>
             <li class="nav-item">
-              <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal" data-target="#login">
-                Login
-              </button>
-              <!-- Modal -->
-              <div class="modal fade" id="login" data-backdrop="static" data-keyboard="false">
-                <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title"></h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <form>
-                        <h2 class="text-center pb-3 text-bold">Inicio Sesión</h2>
-                        <div class="form-group">
-                          <label for="email">Correo electrónico</label>
-                          <input required type="email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                          <label for="password">Contraseña</label>
-                          <input required type="password" class="form-control">
-                        </div>
-                        <div class="form-group form-check">
-                          <input required type="checkbox" class="form-check-input">
-                          <label>Mantenerme conectado</label>
-                        </div>
-                        <div class="d-flex justify-content-center my-3"><button type="submit"
-                            class="btn btn-enviar text-bold">Iniciar sesión</button></div>
-                        <div class="my-3">
-                          <span> ¿Ya tienes cuenta?
-                            <a href="./registrarse.html">Registrate</a></span> /
-                          <span><a href="./recuperacion.html">Recuperar contraseña</a></span>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <a class="nav-link  mr-5 text-white text-bold" href="./lecturacomic.html">Comic</a>
             </li>
           </ul>
         </div>
@@ -76,36 +37,18 @@
     </header>
   </section>
 
-  <section class="slider">
-    <div id="carousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <video autoplay loop src="./Video/logo_spacerose.mp4" class="d-block w-100"></video>
-        </div>
-        <div class="carousel-item">
-          <img src="./Img/slider principal/banner01.jpg" class="d-block w-100 " alt="...">
-        </div>
-
-
-        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+  <section class="banner">   
+      <article class="container_text">
+        <h1>Bievenido a este aventura</h1>
+        <p>LOREM IMPIUS</p>
+      </article>
+    </div>
   </section>
 
   <section>
+    <h3 class="text-center">Sobre SpaceROSE</h3>
     <div class="container d-flex justify-content-center">
-      <div class="row">
-        <h3 class="text-center">Sobre SpaceROSE</h3>
+      <div class="row">        
         <div class="row d-flex align-items-center">
           <article class="col-6">
             <video autoplay loop class="embed-responsive embed-responsive-16by9 shadow p-3 mb-5 bg-body rounded"
@@ -113,54 +56,25 @@
           </article>
           <div class="col-6 text-right">
             <article class="text-justify ">
-              <p>En 1955 se da inicio a lo que hoy se conoce como la carrera espacial, una competencia entre
-                dos grandes bandos (URSS Y U.S.A) que luchan por la gloria, con ese objetivo en mente, en Estados Unidos
-                de América se crea el proyecto
-                Apollo. La historia es ambientada en los años 60, y se centrará en el alunizaje realizado por Apollo 11,
-                este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó los cálculos que
-                hicieron posible dicho suceso. </p>
+              <p> SpaceRose es una historia ambientada en los años 60, centrada en la llegada del hombre a la luna
+                en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
+                los cálculos que hicieron posible dicho suceso.</p>
             </article>
 
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn_login text-white parrafo" data-toggle="modal"
-              data-target="#leercomic">
+            <a type="submit" class="btn btn_login text-white parrafo" href="./lecturacomic.html">
               Leer comic
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade modal_leer" id="leercomic" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body d-flex justify-content-center text-center p-5">
-                    <form action="">
-                      <h2 class="text-bold">Bienvenido(a) Aventurero(a)</h2>
-                      <p class="my-2">Pronto daremos inicio a la misión</p>
-                      <p>¿Estas listo(a)?</p>
-                      <div>
-                        <input class="my-3 text-center" type="text" placeholder="Ingrese su alias">
-                      </div>
-                      <button class="leer p-2 m-2 text-white" > <a href="./lecturacomic.html">Estoy listo(a)</a></button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-
+            </a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="personajes">
+    <h3 class="text-center">Personajes</h3>
     <div class="container">
       <div class="row">
-        <h3 class="text-center">Personajes</h3>
         <div class="row text-center d-flex justify-content-center">
 
           <article class="m-5">
@@ -223,8 +137,8 @@
 
 
   <section>
-    <div class="container">
-      <h3 class="text-bold">Equipo de trabajo</h3>
+    <h3 class="text-bold">Equipo de trabajo</h3>
+    <div class="container bg-white">
       <div class="row text-center">
 
         <div class="col-lg-4 pb-5">
@@ -305,13 +219,8 @@
 
   <section class="footer">
     <div class="container">
-      <footer class="row p-5 mt-5 justify-content-around align-items-center">
-        <!-- <div>
-          <picture>
-            <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Cientonce">
-          </picture>
-        </div> -->
-
+      <footer class="row p-5 justify-content-around align-items-center">
+        
         <div class>
           <span class="text-white text-center">&copy;2020<b> SpaceRose</b></span>
         </div>
